Final + Executive Summary

--- a/Assignment2.html
+++ b/Assignment2.html
@@ -455,7 +455,7 @@ str(alldata)</code></pre>
 ##    1 
 ## 3341</code></pre>
 <p>Looks like all heads of household are literate in some language. Not going to give us anything interesting</p>
-<p>Summary statistics for household head literacy</p>
+<p>Summary statistics for completing secondary level education</p>
 <pre class="r"><code>summary(alldata$educ2)</code></pre>
 <pre><code>##    Min. 1st Qu.  Median    Mean 3rd Qu.    Max.    NA's 
 ##  0.0000  0.0000  0.0000  0.1088  0.0000  1.0000     229</code></pre>
@@ -609,18 +609,31 @@ row.names(clust3solution)=merge2$region
 <p>Add a new column for region names</p>
 <pre class="r"><code>cluster3$region=row.names(clust3solution)
 row.names(cluster3)=NULL</code></pre>
+<p>Label our cluster levels</p>
+<pre class="r"><code>cluster3$cluster.label[cluster3$cluster==1] &lt;- &quot;least developed&quot;
+cluster3$cluster.label[cluster3$cluster==2] &lt;- &quot;less developed&quot;
+cluster3$cluster.label[cluster3$cluster==3] &lt;- &quot;more developed&quot;
+
+str(cluster3)</code></pre>
+<pre><code>## 'data.frame':    30 obs. of  5 variables:
+##  $ cluster      : num  1 2 2 1 2 1 3 1 1 2 ...
+##  $ neighbor     : num  2 1 1 2 1 2 2 2 2 1 ...
+##  $ sil_width    : num  0.239 0.154 0.381 0.267 0.179 ...
+##  $ region       : chr  &quot;1&quot; &quot;2&quot; &quot;3&quot; &quot;4&quot; ...
+##  $ cluster.label: chr  &quot;least developed&quot; &quot;less developed&quot; &quot;less developed&quot; &quot;least developed&quot; ...</code></pre>
 <p>Merge our clustered variable with other variables into a new data frame</p>
 <pre class="r"><code>merge3=merge(merge2, cluster3)
 
 str(merge3)</code></pre>
-<pre><code>## 'data.frame':    30 obs. of  7 variables:
-##  $ region   : num  1 2 3 4 5 6 7 8 9 10 ...
-##  $ educ2    : num  0.1014 0.0941 0.0909 0.0568 0.129 ...
-##  $ gender   : num  0.275 0.306 0.421 0.261 0.301 ...
-##  $ cons     : num  2007 2797 3437 2626 3283 ...
-##  $ cluster  : num  1 2 2 1 2 1 3 1 1 2 ...
-##  $ neighbor : num  2 1 1 2 1 2 2 2 2 1 ...
-##  $ sil_width: num  0.239 0.154 0.381 0.267 0.179 ...</code></pre>
+<pre><code>## 'data.frame':    30 obs. of  8 variables:
+##  $ region       : num  1 2 3 4 5 6 7 8 9 10 ...
+##  $ educ2        : num  0.1014 0.0941 0.0909 0.0568 0.129 ...
+##  $ gender       : num  0.275 0.306 0.421 0.261 0.301 ...
+##  $ cons         : num  2007 2797 3437 2626 3283 ...
+##  $ cluster      : num  1 2 2 1 2 1 3 1 1 2 ...
+##  $ neighbor     : num  2 1 1 2 1 2 2 2 2 1 ...
+##  $ sil_width    : num  0.239 0.154 0.381 0.267 0.179 ...
+##  $ cluster.label: chr  &quot;least developed&quot; &quot;less developed&quot; &quot;less developed&quot; &quot;least developed&quot; ...</code></pre>
 </div>
 <div id="part-7-mapping" class="section level3">
 <h3>PART 7 MAPPING</h3>
